--- a/public/css/output.css
+++ b/public/css/output.css
@@ -859,8 +859,16 @@ select {
   top: 50%;
 }
 
+.top-\[170px\] {
+  top: 170px;
+}
+
 .top-\[216px\] {
   top: 216px;
+}
+
+.bottom-0 {
+  bottom: 0px;
 }
 
 .z-0 {
@@ -1016,6 +1024,10 @@ select {
   margin-top: 130px;
 }
 
+.mt-\[264px\] {
+  margin-top: 264px;
+}
+
 .mt-\[2px\] {
   margin-top: 2px;
 }
@@ -1158,6 +1170,10 @@ select {
   height: 51px;
 }
 
+.h-\[536px\] {
+  height: 536px;
+}
+
 .h-\[56px\] {
   height: 56px;
 }
@@ -1166,8 +1182,17 @@ select {
   height: 70px;
 }
 
+.h-\[885px\] {
+  height: 885px;
+}
+
 .h-\[90px\] {
   height: 90px;
+}
+
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
 }
 
 .h-full {
@@ -1184,6 +1209,10 @@ select {
 
 .min-h-screen {
   min-height: 100vh;
+}
+
+.min-h-\[calc\(100vh-40px\)\] {
+  min-height: calc(100vh - 40px);
 }
 
 .w-1\/3 {
@@ -1300,6 +1329,10 @@ select {
   width: max-content;
 }
 
+.w-\[400px\] {
+  width: 400px;
+}
+
 .min-w-0 {
   min-width: 0px;
 }
@@ -1322,6 +1355,10 @@ select {
 
 .max-w-7xl {
   max-width: 80rem;
+}
+
+.max-w-\[1000px\] {
+  max-width: 1000px;
 }
 
 .max-w-\[1100px\] {
@@ -1722,6 +1759,11 @@ select {
   border-top-right-radius: 12px;
 }
 
+.rounded-t-\[32px\] {
+  border-top-left-radius: 32px;
+  border-top-right-radius: 32px;
+}
+
 .border {
   border-width: 1px;
 }
@@ -2041,12 +2083,20 @@ select {
   padding: 1.5rem;
 }
 
+.p-8 {
+  padding: 2rem;
+}
+
 .p-\[12px_16px\] {
   padding: 12px 16px;
 }
 
 .p-\[16px_32px\] {
   padding: 16px 32px;
+}
+
+.p-\[20px_32px\] {
+  padding: 20px 32px;
 }
 
 .p-\[2px_10px\] {
@@ -2251,6 +2301,10 @@ select {
   padding-top: 70px;
 }
 
+.pb-6 {
+  padding-bottom: 1.5rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -2278,6 +2332,11 @@ select {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-\[30px\] {
@@ -2324,6 +2383,10 @@ select {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-\[28px\] {
+  font-size: 28px;
 }
 
 .font-bold {
@@ -2378,6 +2441,10 @@ select {
   line-height: 52px;
 }
 
+.leading-\[54px\] {
+  line-height: 54px;
+}
+
 .leading-\[60px\] {
   line-height: 60px;
 }
@@ -2388,6 +2455,10 @@ select {
 
 .leading-tight {
   line-height: 1.25;
+}
+
+.leading-\[42px\] {
+  line-height: 42px;
 }
 
 .-tracking-\[2\%\] {
